--- a/index.ipynb
+++ b/index.ipynb
@@ -1282,12 +1282,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "The random guessing classifier accuracy score is given by 1/k where k is number of the classes, which in our case is 5, based on this the accuracy from random guessing is 20%. The fitted models above provide us with a test accuracy score of 78% and 81%, therefore the fitted models perform way better.\n",
+    "\n",
+    "From the results we got from our models for both the training and testing accuracy there are clear signs that our model is overfitting on the training data set, therefore we need to perform parameter tuning on both models to check if we will get significant changes in both cases."
    ]
   },
   {
